--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
  <body>
    	<h1>My First Heading</h1>
    	<p>My first paragraph.</p>
+<b>text to bold</b>
+	<u>text to underline</u>
 
  </body>
 </html>
