--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <body>
-   	<h1>My First Heading</h1>
-   	<p>My first paragraph.</p>
+   	<h1>Montague the Maltipoo</h1>
+   	<p>This website is about my amazing dog Monte</p>
 <b>text to bold</b>
 	<u>text to underline</u>
+  <p><a href="url">link text</a></p>
 
  </body>
 </html>
