--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
  <body>
-   	<h1>Montague the Maltipoo</h1>
+ 	<h1>Montague the Maltipoo</h1>
    	<p>This website is about my amazing dog Monte</p>
-<b>text to bold</b>
+	<b>text to bold</b>
 	<u>text to underline</u>
-  <p><a href="url">link text</a></p>
+  	<p><a href="https://www.dogster.com/">link text</a></p>
 
  </body>
 </html>
