--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
- 	<h1>Montague the Maltipoo</h1>
-   	<p>This website is about my amazing dog Monte</p>
+ 	<h1>Maltipoos</h1>
+   	<p>This website is about the most amazing dog breed, Maltipoos!</p>
 	<b>text to bold</b>
 	<u>text to underline</u>
   	<p><a href="https://www.dogster.com/">link text</a></p>
