--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<b>text to bold</b>
 	<u>text to underline</u>
   	<p><a href="https://www.dogster.com/">link text</a></p>
+	<p><img src=" https://2.bp.blogspot.com/-bvgSivusWfw/WRn72ueEHaI/AAAAAAAAR8o/9dsOCtFN6kwZl9wLUpjMOpKZ3Tc8nsH1gCLcB/s1600/maltipoo+females.jpg" alt="text" style="width:300px;height:300px;"></p>
 
  </body>
 </html>
