--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<p><a href="https://www.dogster.com/">link text</a></p>
 	<p><img src=" https://2.bp.blogspot.com/-bvgSivusWfw/WRn72ueEHaI/AAAAAAAAR8o/9dsOCtFN6kwZl9wLUpjMOpKZ3Tc8nsH1gCLcB/s1600/maltipoo+females.jpg" alt="text" style="width:300px;height:300px;"></p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/wrGokIfxzKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<font color="blue">This is some text!</font>
+	<font color="blue">Maltipoos are a mix of maltese and poodle!</font>
 
 </body>
 </html>
