--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
  <body>
  	<h1>Maltipoos</h1>
-   	<p>This website is about the most amazing dog breed, Maltipoos!</p>
-	<b>text to bold</b>
-	<u>text to underline</u>
-  	<p><a href="https://www.dogster.com/">link text</a></p>
+   	<p>This website is about the most amazing dog breed, Maltipoos! I myself am a maltipoo owner and I hope your visit to this website enhances your life greatly.</p>
+	I love <b>maltipoos</b> because they are friendly.
+	 <u>Maltipoos</u> are also very smart.
+  	<p><a href="https://www.dogster.com/">Click here to go to Dogster</a></p>
 	<p><img src=" https://2.bp.blogspot.com/-bvgSivusWfw/WRn72ueEHaI/AAAAAAAAR8o/9dsOCtFN6kwZl9wLUpjMOpKZ3Tc8nsH1gCLcB/s1600/maltipoo+females.jpg" alt="text" style="width:300px;height:300px;"></p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/wrGokIfxzKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<font color="blue">Maltipoos are a mix of maltese and poodle!</font>
