--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<font color="blue">Maltipoos are a mix of maltese and poodle!</font>
  	 <body bgcolor="#42b3f5">
    	<button>Click if you love maltipoos</button>
-	 <li>Dogs</li>
-	 <li>are</li>
-  	<li>cute</li>
+	<h2>Other types of dogs that are like maltipoos include:</h2>
+	 <li>Beagles</li>
+	 <li>Pugs</li>
+  	<li>Poodles</li>
 </ul>
 </body>
 </html>
