--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 	<font color="blue">Maltipoos are a mix of maltese and poodle!</font>
  	 <body bgcolor="#42b3f5">
    	<button>Click if you love maltipoos</button>
-	<h2>Other types of dogs that are like maltipoos include:</h2>
+	<h2>Other interesting types of dogs include:</h2>
 <ul>
 	<li>Beagles</li>
 	 <li>Pugs</li>
   	<li>Poodles</li>
+	<li>Collies</li>
+	<li>French Bulldogs</li>
+	<li>Great Danes</li>
 </ul>
 </body>
 </html>
